--- a/index.html
+++ b/index.html
@@ -731,6 +731,34 @@
 
             </li>
 
+            
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Spring Security</h5>
+                <data value="50">60%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 60%;"></div>
+              </div>
+
+            </li>
+
+            
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Spring Cloud</h5>
+                <data value="50">60%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 60%;"></div>
+              </div>
+
+            </li>
+
           </ul>
 
         </section>
