--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 
             <div class="contact-info">
               <p class="contact-title">Email</p>
-
-              <a href="mailto:yashgaglaniofficial@gmail.com" class="contact-link">yashgaglaniofficial@gmail.com</a>
+              <a href="mailto:work.yashgaglani@gmail.com" class="contact-link">work.yashgaglani@gmail.com</a>
             </div>
 
           </li>
